Fix broken conditional

--- a/templates/sasl_passwd.j2
+++ b/templates/sasl_passwd.j2
@@ -1,4 +1,4 @@
-{% if( smtp_start_tls == true )  %}
+{% if( smtp_start_tls | bool == true )  %}
 {{ smtp_host }}:{{ smtp_port }} {{ smtp_authuser }}:{{ smtp_authpassword }}
 {% else %}
 [127.0.0.1]:1025 {{ smtp_authuser }}:{{ smtp_authpassword }}
