--- a/templates/main.cf.j2
+++ b/templates/main.cf.j2
@@ -23,7 +23,7 @@ html_directory = no
 manpage_directory = /usr/share/man
 sample_directory = /usr/share/doc/postfix-2.10.1/samples
 readme_directory = /usr/share/doc/postfix-2.10.1/README_FILES
-{% if( smtp_start_tls == true )  %}
+{% if( smtp_start_tls | bool == true )  %}
 relayhost = {{ smtp_host }}:{{ smtp_port }}
 smtp_use_tls = yes
 {% else %}
