Don't try using ipv6 to send mail.
We don't always get good ipv6 info from DNS.

--- a/templates/main.cf.j2
+++ b/templates/main.cf.j2
@@ -4,7 +4,7 @@ daemon_directory = /usr/libexec/postfix
 data_directory = /var/lib/postfix
 mail_owner = postfix
 inet_interfaces = 127.0.0.1
-inet_protocols = all
+inet_protocols = ipv4
 mydestination = $myhostname, localhost.$mydomain, localhost
 sender_canonical_maps = regexp:/etc/postfix/sender_canonical
 unknown_local_recipient_reject_code = 550
